--- a/index.html
+++ b/index.html
@@ -1,11 +1,57 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <link rel="stylesheet" href="style.css">
-    <title>My First Website</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Project Showcase</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Hello, World!</h1>
-    <p>Welcome to my GitHub Pages website! I’m learning how to code.</p>
+    <!-- Header -->
+    <header>
+        <h1>Your Name</h1>
+        <nav>
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#about">About</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <!-- Main Content -->
+    <main>
+        <section id="projects">
+            <h2>My Projects</h2>
+            <div class="project-grid">
+                <!-- Project Card 1 -->
+                <div class="project-card">
+                    <img src="https://via.placeholder.com/300x200" alt="Project 1">
+                    <h3>Bike Parts Store</h3>
+                    <p>A Django-based e-commerce site for bicycle parts.</p>
+                    <a href="projects/bike-store.html" class="learn-more">Learn More</a>
+                </div>
+                <!-- Project Card 2 -->
+                <div class="project-card">
+                    <img src="https://via.placeholder.com/300x200" alt="Project 2">
+                    <h3>Game Score Tracker</h3>
+                    <p>A fun app to track high scores in Python.</p>
+                    <a href="projects/game-tracker.html" class="learn-more">Learn More</a>
+                </div>
+                <!-- Project Card 3 -->
+                <div class="project-card">
+                    <img src="https://via.placeholder.com/300x200" alt="Project 3">
+                    <h3>Personal Blog</h3>
+                    <p>A static blog site built with HTML and CSS.</p>
+                    <a href="projects/blog.html" class="learn-more">Learn More</a>
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <!-- Footer -->
+    <footer>
+        <p>Contact me at: your.email@example.com | <a href="https://github.com/yourusername">GitHub</a></p>
+    </footer>
 </body>
 </html>
