--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="project-grid">
                 <!-- Project Card 1 -->
                 <div class="project-card">
-                    <img src="02.jpg" alt="Project 1">
+                    <img src="images/02.jpg" alt="Project 1">
                     <h3>Bike Parts Store</h3>
                     <p>A Django-based e-commerce site for bicycle parts.</p>
                     <a href="projects/bike-store.html" class="learn-more">Learn More</a>
