--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
                 </div>
                 <!-- Project Card 2 -->
                 <div class="project-card">
-                    <img src="https://via.placeholder.com/300x200" alt="Project 2">
+                    <img src="images/03.jpg" alt="Project 2">
                     <h3>Game Score Tracker</h3>
                     <p>A fun app to track high scores in Python.</p>
                     <a href="projects/game-tracker.html" class="learn-more">Learn More</a>
                 </div>
                 <!-- Project Card 3 -->
                 <div class="project-card">
-                    <img src="https://via.placeholder.com/300x200" alt="Project 3">
+                    <img src="images/04.jpg" alt="Project 3">
                     <h3>Personal Blog</h3>
                     <p>A static blog site built with HTML and CSS.</p>
                     <a href="projects/blog.html" class="learn-more">Learn More</a>
