--- a/index.html
+++ b/index.html
@@ -1,94 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>AWS Projects Portfolio</title>
-  <link rel="stylesheet" href="style.css" />
-  <script src="https://cdn.tailwindcss.com"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Project Showcase</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-<body class="bg-gray-100 text-gray-900 font-sans">
-  <div class="flex min-h-screen">
-    <!-- Sidebar -->
-    <aside class="w-64 bg-blue-800 text-white p-6 space-y-4">
-      <h1 class="text-2xl font-bold mb-4">AWS Portfolio</h1>
-      <nav class="space-y-2">
-        <a href="#about" class="block hover:text-yellow-300 transition">About Me</a>
-        <a href="#timeline" class="block hover:text-yellow-300 transition">Timeline</a>
-        <a href="#projects" class="block hover:text-yellow-300 transition">Projects</a>
-        <a href="#contact" class="block hover:text-yellow-300 transition">Contact</a>
-      </nav>
-    </aside>
+<body>
+    <!-- Header -->
+    <header>
+        <h1>Your Name</h1>
+        <nav>
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#projects">Projects</a></li>
+            </ul>
+        </nav>
+    </header>
 
     <!-- Main Content -->
-    <main class="flex-1 p-10 space-y-16">
-      <!-- About Section -->
-      <section id="about" class="animate-fade-in-up">
-        <h2 class="text-3xl font-semibold mb-4">About Me</h2>
-        <p class="text-lg leading-relaxed">Cloud developer engineer with hands-on AWS experience building and deploying scalable applications.</p>
-      </section>
+    <main>
+        <!-- About Me Section -->
+        <section id="about">
+            <h2>About Me</h2>
+            <p>I’m a passionate coder who loves solving problems and building projects like my bike store site. I thrive in team settings, having collaborated on group projects, and I’m always eager to learn new tools to adapt to challenges.</p>
+        </section>
 
-      <!-- Timeline Section -->
-      <section id="timeline" class="animate-fade-in-up">
-        <h2 class="text-3xl font-semibold mb-4">Learning Timeline</h2>
-        <div class="border-l-4 border-blue-700 ml-2 pl-6">
-          <div class="mb-8">
-            <h3 class="font-bold">Q1: AWS Foundations</h3>
-            <p>EC2, S3, IAM basics</p>
-          </div>
-          <div class="mb-8">
-            <h3 class="font-bold">Q2: Infrastructure</h3>
-            <p>CloudFormation, VPC, Lambda</p>
-          </div>
-          <div class="mb-8">
-            <h3 class="font-bold">Q3: DevOps & Security</h3>
-            <p>CI/CD with CodePipeline, WAF, Shield</p>
-          </div>
-        </div>
-      </section>
-
-      <!-- Projects Section -->
-      <section id="projects" class="animate-fade-in-up">
-        <h2 class="text-3xl font-semibold mb-6">Projects</h2>
-        <div class="flex space-x-4 mb-4">
-          <button class="tab active" onclick="showCategory('all')">All</button>
-          <button class="tab" onclick="showCategory('infra')">Infrastructure</button>
-          <button class="tab" onclick="showCategory('serverless')">Serverless</button>
-        </div>
-        <div class="grid grid-cols-1 md:grid-cols-2 gap-6" id="projectCards">
-          <div class="project-card" data-category="infra">
-            <h3 class="text-xl font-bold">VPC and Subnet Design</h3>
-            <p>Built custom VPCs with subnets, routing tables, and security groups.</p>
-          </div>
-          <div class="project-card" data-category="serverless">
-            <h3 class="text-xl font-bold">Serverless API with Lambda</h3>
-            <p>Deployed a RESTful API with Lambda, API Gateway, and DynamoDB.</p>
-          </div>
-          <div class="project-card" data-category="infra">
-            <h3 class="text-xl font-bold">CI/CD with CodePipeline</h3>
-            <p>Automated deployment with CodePipeline, CodeBuild, and S3 hosting.</p>
-          </div>
-        </div>
-      </section>
-
-      <!-- Contact Section -->
-      <section id="contact" class="animate-fade-in-up">
-        <h2 class="text-3xl font-semibold mb-4">Contact</h2>
-        <p>Email: yourname@example.com</p>
-        <p>GitHub: github.com/yourprofile</p>
-      </section>
+        <!-- Projects Section -->
+        <section id="projects">
+            <h2>My Projects</h2>
+            <div class="project-grid">
+                <!-- Project Card 1 -->
+                <div class="project-card">
+                    <img src="images/project1.jpg" alt="Bike Parts Store">
+                    <h3>Bike Parts Store</h3>
+                    <p>I loved building this Django-based e-commerce site for bike enthusiasts—it was a fun challenge to make shopping for parts seamless!</p>
+                    <p class="challenge"><strong>Challenge Solved:</strong> Optimized database queries to reduce load time by 15%.</p>
+                    <p class="skills"><strong>Skills:</strong> Django, MySQL, Python – Built a site handling 100 users daily.</p>
+                    <a href="projects/bike-store.html" class="learn-more">Learn More</a>
+                </div>
+                <!-- Project Card 2 -->
+                <div class="project-card">
+                    <img src="images/project2.jpg" alt="Game Score Tracker">
+                    <h3>Game Score Tracker</h3>
+                    <p>I had a blast creating this app to track high scores—it’s perfect for gamers who want to compete with friends!</p>
+                    <p class="challenge"><strong>Challenge Solved:</strong> Fixed a bug to ensure accurate score updates in real-time.</p>
+                    <p class="skills"><strong>Skills:</strong> Python, Tkinter – Developed an app used by 50+ local gamers.</p>
+                    <a href="projects/game-tracker.html" class="learn-more">Learn More</a>
+                </div>
+                <!-- Project Card 3 -->
+                <div class="project-card">
+                    <img src="images/project3.jpg" alt="Personal Blog">
+                    <h3>Personal Blog</h3>
+                    <p>I enjoyed crafting this static blog to share my coding journey—it’s been a great way to connect with others!</p>
+                    <p class="challenge"><strong>Challenge Solved:</strong> Improved mobile responsiveness for better user experience.</p>
+                    <p class="skills"><strong>Skills:</strong> HTML, CSS – Designed a blog with 200+ monthly visitors.</p>
+                    <a href="projects/blog.html" class="learn-more">Learn More</a>
+                </div>
+            </div>
+        </section>
     </main>
-  </div>
 
-  <script>
-    function showCategory(category) {
-      const cards = document.querySelectorAll('.project-card');
-      document.querySelectorAll('.tab').forEach(btn => btn.classList.remove('active'));
-      event.target.classList.add('active');
-      cards.forEach(card => {
-        card.style.display = (category === 'all' || card.dataset.category === category) ? 'block' : 'none';
-      });
-    }
-  </script>
+    <!-- Footer -->
+    <footer>
+        <p>Contact me at: your.email@example.com | <a href="https://github.com/yourusername">GitHub</a></p>
+        <p>I’m a team player who values collaboration and continuous learning—let’s build something great together!</p>
+    </footer>
 </body>
 </html>
