--- a/preview/index.html
+++ b/preview/index.html
@@ -6,11 +6,19 @@
   <title>AWS Projects Portfolio</title>
   <link rel="stylesheet" href="style.css" />
   <script src="https://cdn.tailwindcss.com"></script>
+  <style>
+    html {
+      scroll-behavior: smooth;
+    }
+    .active {
+      color: #facc15;
+    }
+  </style>
 </head>
 <body class="bg-gray-100 text-gray-900 font-sans">
   <div class="flex min-h-screen">
     <!-- Sidebar -->
-    <aside class="w-64 bg-blue-800 text-white p-6 space-y-4">
+    <aside class="w-64 bg-blue-800 text-white p-6 space-y-4 sticky top-0 h-screen">
       <h1 class="text-2xl font-bold mb-4">AWS Portfolio</h1>
       <nav class="space-y-2">
         <a href="#about" class="block hover:text-yellow-300 transition">About Me</a>
@@ -20,80 +28,61 @@
         <a href="#projects" class="block hover:text-yellow-300 transition">Projects</a>
         <a href="#contact" class="block hover:text-yellow-300 transition">Contact</a>
       </nav>
+      <div class="mt-6">
+        <button onclick="toggleDarkMode()" class="bg-yellow-400 text-black px-4 py-2 rounded">Toggle Dark Mode</button>
+        <a href="/resume.pdf" download class="block mt-4 text-yellow-300 hover:underline">Download Resume</a>
+        <a href="https://www.linkedin.com/in/yourprofile" target="_blank" class="block text-yellow-300 hover:underline">LinkedIn</a>
+      </div>
     </aside>
 
     <!-- Main Content -->
     <main class="flex-1 p-10 space-y-16">
-      <!-- About Section -->
       <section id="about" class="animate-fade-in-up">
         <h2 class="text-3xl font-semibold mb-4">About Me</h2>
         <p class="text-lg leading-relaxed">Cloud developer engineer with hands-on AWS experience building and deploying scalable applications.</p>
       </section>
 
-      <!-- Timeline Section -->
       <section id="timeline" class="animate-fade-in-up">
         <h2 class="text-3xl font-semibold mb-4">Learning Timeline</h2>
-        <div class="border-l-4 border-blue-700 ml-2 pl-6">
-          <div class="mb-8">
-            <h3 class="font-bold">Q1: AWS Foundations</h3>
-            <p>EC2, S3, IAM basics</p>
-          </div>
-          <div class="mb-8">
-            <h3 class="font-bold">Q2: Infrastructure</h3>
-            <p>CloudFormation, VPC, Lambda</p>
-          </div>
-          <div class="mb-8">
-            <h3 class="font-bold">Q3: DevOps & Security</h3>
-            <p>CI/CD with CodePipeline, WAF, Shield</p>
-          </div>
-        </div>
+        <details class="mb-4">
+          <summary class="font-bold cursor-pointer">Q1: AWS Foundations</summary>
+          <p class="ml-6">EC2, S3, IAM basics</p>
+        </details>
+        <details class="mb-4">
+          <summary class="font-bold cursor-pointer">Q2: Infrastructure</summary>
+          <p class="ml-6">CloudFormation, VPC, Lambda</p>
+        </details>
+        <details class="mb-4">
+          <summary class="font-bold cursor-pointer">Q3: DevOps & Security</summary>
+          <p class="ml-6">CI/CD with CodePipeline, WAF, Shield</p>
+        </details>
       </section>
 
-      <!-- Skills Dashboard -->
       <section id="skills" class="animate-fade-in-up">
         <h2 class="text-3xl font-semibold mb-6">Skills Dashboard</h2>
         <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
-          <div>
-            <h3 class="font-bold mb-2">EC2</h3>
-            <div class="w-full bg-gray-300 rounded-full h-4">
-              <div class="bg-blue-600 h-4 rounded-full" style="width: 90%"></div>
-            </div>
-          </div>
-          <div>
-            <h3 class="font-bold mb-2">Lambda</h3>
-            <div class="w-full bg-gray-300 rounded-full h-4">
-              <div class="bg-green-600 h-4 rounded-full" style="width: 80%"></div>
-            </div>
-          </div>
-          <div>
-            <h3 class="font-bold mb-2">CloudFormation</h3>
-            <div class="w-full bg-gray-300 rounded-full h-4">
-              <div class="bg-purple-600 h-4 rounded-full" style="width: 75%"></div>
-            </div>
-          </div>
+          <div><h3 class="font-bold mb-2">EC2</h3><div class="w-full bg-gray-300 rounded-full h-4"><div class="bg-blue-600 h-4 rounded-full" style="width: 90%"></div></div></div>
+          <div><h3 class="font-bold mb-2">Lambda</h3><div class="w-full bg-gray-300 rounded-full h-4"><div class="bg-green-600 h-4 rounded-full" style="width: 80%"></div></div></div>
+          <div><h3 class="font-bold mb-2">CloudFormation</h3><div class="w-full bg-gray-300 rounded-full h-4"><div class="bg-purple-600 h-4 rounded-full" style="width: 75%"></div></div></div>
         </div>
       </section>
 
-      <!-- Labs Gallery -->
       <section id="labs" class="animate-fade-in-up">
         <h2 class="text-3xl font-semibold mb-6">Lab Gallery</h2>
         <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
           <div class="p-4 bg-white rounded shadow-md">
             <h3 class="text-xl font-bold">VPC Setup Lab</h3>
             <p class="text-gray-600">Designed isolated subnets, route tables, and NAT gateways.</p>
+            <button onclick="openModal('vpc')" class="text-blue-600 underline mt-2">Learn More</button>
           </div>
           <div class="p-4 bg-white rounded shadow-md">
             <h3 class="text-xl font-bold">IAM Roles Lab</h3>
             <p class="text-gray-600">Created roles with custom policies and used them with EC2.</p>
-          </div>
-          <div class="p-4 bg-white rounded shadow-md">
-            <h3 class="text-xl font-bold">Lambda Trigger Lab</h3>
-            <p class="text-gray-600">Triggered Lambda via S3 upload events to process images.</p>
+            <button onclick="openModal('iam')" class="text-blue-600 underline mt-2">Learn More</button>
           </div>
         </div>
       </section>
 
-      <!-- Projects Section -->
       <section id="projects" class="animate-fade-in-up">
         <h2 class="text-3xl font-semibold mb-6">Projects</h2>
         <div class="flex space-x-4 mb-4">
@@ -110,20 +99,24 @@
             <h3 class="text-xl font-bold">Serverless API with Lambda</h3>
             <p>Deployed a RESTful API with Lambda, API Gateway, and DynamoDB.</p>
           </div>
-          <div class="project-card" data-category="infra">
-            <h3 class="text-xl font-bold">CI/CD with CodePipeline</h3>
-            <p>Automated deployment with CodePipeline, CodeBuild, and S3 hosting.</p>
-          </div>
         </div>
       </section>
 
-      <!-- Contact Section -->
       <section id="contact" class="animate-fade-in-up">
         <h2 class="text-3xl font-semibold mb-4">Contact</h2>
         <p>Email: yourname@example.com</p>
         <p>GitHub: github.com/yourprofile</p>
       </section>
     </main>
+  </div>
+
+  <!-- Modal -->
+  <div id="modal" class="fixed inset-0 bg-black bg-opacity-50 hidden items-center justify-center">
+    <div class="bg-white p-6 rounded shadow-lg w-96">
+      <h3 id="modal-title" class="text-xl font-bold mb-2">Modal Title</h3>
+      <p id="modal-content" class="text-gray-700">Modal content goes here.</p>
+      <button onclick="closeModal()" class="mt-4 bg-blue-600 text-white px-4 py-2 rounded">Close</button>
+    </div>
   </div>
 
   <script>
@@ -135,7 +128,28 @@
         card.style.display = (category === 'all' || card.dataset.category === category) ? 'block' : 'none';
       });
     }
+
+    function toggleDarkMode() {
+      document.documentElement.classList.toggle('dark');
+    }
+
+    function openModal(id) {
+      const titles = {
+        'vpc': 'VPC Lab Details',
+        'iam': 'IAM Lab Details'
+      };
+      const contents = {
+        'vpc': 'Detailed description of the VPC lab goes here.',
+        'iam': 'Detailed description of the IAM lab goes here.'
+      };
+      document.getElementById('modal-title').textContent = titles[id];
+      document.getElementById('modal-content').textContent = contents[id];
+      document.getElementById('modal').classList.remove('hidden');
+    }
+
+    function closeModal() {
+      document.getElementById('modal').classList.add('hidden');
+    }
   </script>
 </body>
 </html>
-
