--- a/preview/index.html
+++ b/preview/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>AWS Projects Portfolio</title>
   <link rel="stylesheet" href="style.css" />
-  <script src="https://cdn.tailwindcss.com"></script>
+  <script src="preview/javascript.js"></script>
   <style>
     html {
       scroll-behavior: smooth;
