--- a/preview/index.html
+++ b/preview/index.html
@@ -151,6 +151,6 @@
       document.getElementById('modal').classList.add('hidden');
     }
   </script>
-  <script src="main.js"></script>
+  <script src="javascript.js"></script>
 </body>
 </html>
