--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
-    <!-- Hero Section (Theme-Based: Tech Explorer) -->
+    <!-- Hero Section -->
     <section id="hero" class="glass">
         <div class="hero-content">
             <h1>Your Name</h1>
@@ -42,6 +42,33 @@
         <section id="about" class="glass fade-in">
             <h2>About Me</h2>
             <p>I’m a passionate developer who thrives on solving complex challenges and crafting innovative projects. With a knack for teamwork and a hunger for learning, I’m ready to make an impact.</p>
+        </section>
+
+        <!-- AWS Sliding Bar -->
+        <section id="aws-skills" class="glass fade-in">
+            <h2>AWS Skills</h2>
+            <div class="slider-container">
+                <div class="slider">
+                    <!-- Duplicate icons for seamless infinite scroll -->
+                    <img src="https://simpleicons.org/icons/amazonaws.svg" alt="AWS" title="AWS">
+                    <img src="https://simpleicons.org/icons/amazons3.svg" alt="S3" title="Amazon S3">
+                    <img src="https://simpleicons.org/icons/amazonec2.svg" alt="EC2" title="Amazon EC2">
+                    <img src="https://simpleicons.org/icons/awslambda.svg" alt="Lambda" title="AWS Lambda">
+                    <img src="https://simpleicons.org/icons/amazonrds.svg" alt="RDS" title="Amazon RDS">
+                    <img src="https://simpleicons.org/icons/amazondynamodb.svg" alt="DynamoDB" title="Amazon DynamoDB">
+                    <img src="https://simpleicons.org/icons/amazoncloudwatch.svg" alt="CloudWatch" title="Amazon CloudWatch">
+                    <img src="https://simpleicons.org/icons/amazonecs.svg" alt="ECS" title="Amazon ECS">
+                    <!-- Duplicate for infinite scroll -->
+                    <img src="https://simpleicons.org/icons/amazonaws.svg" alt="AWS" title="AWS">
+                    <img src="https://simpleicons.org/icons/amazons3.svg" alt="S3" title="Amazon S3">
+                    <img src="https://simpleicons.org/icons/amazonec2.svg" alt="EC2" title="Amazon EC2">
+                    <img src="https://simpleicons.org/icons/awslambda.svg" alt="Lambda" title="AWS Lambda">
+                    <img src="https://simpleicons.org/icons/amazonrds.svg" alt="RDS" title="Amazon RDS">
+                    <img src="https://simpleicons.org/icons/amazondynamodb.svg" alt="DynamoDB" title="Amazon DynamoDB">
+                    <img src="https://simpleicons.org/icons/amazoncloudwatch.svg" alt="CloudWatch" title="Amazon CloudWatch">
+                    <img src="https://simpleicons.org/icons/amazonecs.svg" alt="ECS" title="Amazon ECS">
+                </div>
+            </div>
         </section>
 
         <!-- Stats Dashboard -->
