--- a/index.html
+++ b/index.html
@@ -22,20 +22,6 @@
         </div>
     </section>
 
-    <!-- Navigation -->
-    <header>
-        <nav>
-            <ul>
-                <li><a href="#hero">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#dashboard">Dashboard</a></li>
-                <li><a href="#timeline">Journey</a></li>
-                <li><a href="#projects">Gallery</a></li>
-                <li><a href="#game">Code Quest</a></li>
-            </ul>
-        </nav>
-    </header>
-
     <!-- Main Content -->
     <main>
         <!-- About Me Section -->
@@ -44,12 +30,12 @@
             <p>I’m a passionate developer who thrives on solving complex challenges and crafting innovative projects. With a knack for teamwork and a hunger for learning, I’m ready to make an impact.</p>
         </section>
 
-        <!-- AWS Sliding Bar -->
-        <section id="aws-skills" class="glass fade-in">
+        <!-- AWS Sliding Bar (Full Width) -->
+        <section id="aws-skills" class="fade-in">
             <h2>AWS Skills</h2>
             <div class="slider-container">
                 <div class="slider">
-                    <!-- Duplicate icons for seamless infinite scroll -->
+                    <!-- Color icons from Simple Icons -->
                     <img src="https://simpleicons.org/icons/amazonaws.svg" alt="AWS" title="AWS">
                     <img src="https://simpleicons.org/icons/amazons3.svg" alt="S3" title="Amazon S3">
                     <img src="https://simpleicons.org/icons/amazonec2.svg" alt="EC2" title="Amazon EC2">
