--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
         <!-- AWS Sliding Bar (Full Width) -->
         <section id="aws-skills" class="fade-in">
-            <h2>AWS Skills</h2>
+           
             <div class="slider-container">
                 <div class="slider">
                     <!-- Color icons from Simple Icons -->
@@ -45,6 +45,15 @@
                     <img src="https://simpleicons.org/icons/amazoncloudwatch.svg" alt="CloudWatch" title="Amazon CloudWatch">
                     <img src="https://simpleicons.org/icons/amazonecs.svg" alt="ECS" title="Amazon ECS">
                     <!-- Duplicate for infinite scroll -->
+                    <img src="https://simpleicons.org/icons/amazonaws.svg" alt="AWS" title="AWS">
+                    <img src="https://simpleicons.org/icons/amazons3.svg" alt="S3" title="Amazon S3">
+                    <img src="https://simpleicons.org/icons/amazonec2.svg" alt="EC2" title="Amazon EC2">
+                    <img src="https://simpleicons.org/icons/awslambda.svg" alt="Lambda" title="AWS Lambda">
+                    <img src="https://simpleicons.org/icons/amazonrds.svg" alt="RDS" title="Amazon RDS">
+                    <img src="https://simpleicons.org/icons/amazondynamodb.svg" alt="DynamoDB" title="Amazon DynamoDB">
+                    <img src="https://simpleicons.org/icons/amazoncloudwatch.svg" alt="CloudWatch" title="Amazon CloudWatch">
+                    <img src="https://simpleicons.org/icons/amazonecs.svg" alt="ECS" title="Amazon ECS">
+
                     <img src="https://simpleicons.org/icons/amazonaws.svg" alt="AWS" title="AWS">
                     <img src="https://simpleicons.org/icons/amazons3.svg" alt="S3" title="Amazon S3">
                     <img src="https://simpleicons.org/icons/amazonec2.svg" alt="EC2" title="Amazon EC2">
